GNOME Bugzilla – Bug 678787
GHex unable to fit on smaller screens
Last modified: 2013-04-11 10:54:30 UTC
Hi. GHex is unable to maximize or fit fully on screen when using a resolution of 1024x600. The minimum window height seems to be 100 or so pixels more than the available space. If the main view was able to collapse a little, the program would be perfectly usable on such a screen resolution. I understand if get told that 1024x600 resolution is not supported but I thought I'd report this anyway.
Hi Craig, thanks for taking the time to report the issue. GHex appears to request a height of 16 lines, and not allowing to resize the window any smaller than this. I think 16 visible lines is a good default, but it should certainly be possible to make the window smaller than that. I'll look into fixing it.
This should hopefully be fixed in GHex 3.8.0. Thanks again for reporting it!