Decrease the minimum height of the GHex window

... so that it can be resized to fit on 1024x600 screens.

https://bugzilla.gnome.org/show_bug.cgi?id=678787